# data-quality-etl

./: 404.html  README.md  index.html  my_duckdb.db  objects.inv  pyproject.toml  schema_crm.py
.github/workflows/: CI.yml
app/: etl.py  etl_infer_schema.py  my_schema.py
docs/: index.md
search/: search_index.json
sql/: create_table_produtos_bronze.sql  create_table_produtos_bronze_email.sql  insert_into_tabela_bronze.sql  insert_into_tabela_bronze_email.sql  insert_wrong_values_into_tabela_bronze.sql
tests/: test_func_etl.py
