[tool.poetry]
name = "data-quality-wk02"
version = "0.1.0"
description = ""
authors = ["Lorenzo Uriel <lorenzo.uriel@geosiga.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
taskipy = "^1.12.2"
pytest = "^8.1.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.13"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-mermaid2-plugin = "^1.1.1"
isort = "^5.13.2"
blue = "^0.9.1"
md-mermaid = "^0.1.1"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
pandera = "^0.18.0"
psycopg2 = "^2.9.9"
frictionless = "^5.16.1"
pyaml = "^23.12.0"
duckdb = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
test = "pytest tests -v"
format = "blue . && isort ."
docs = "mkdocs serve"